# groth16-solana

./: Cargo.toml  README.md  package-lock.json  package.json
src/: decompression.rs  errors.rs  groth16.rs  lib.rs
src/syscalls/: definitions.rs  mod.rs
src/syscalls/alt_bn128/: compression.rs  mod.rs
