[package]
name = "groth16-solana"
version = "0.0.3"
edition = "2021"
description = "groth16 verification with solana alt_bn128 syscalls"
repository = "https://github.com/Lightprotocol/groth16-solana"
license = "MIT"

[dependencies]
solana-program = "1.17.14"
thiserror = "1.0"
ark-serialize = "0.4.2"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-bn254 = "0.4.0"


[dev-dependencies]
ark-std = "0.4.0"
array-bytes = "6.2.2"
serde = "1.0.195"
serde_json = "1.0.111"
